# msc-thesis

./: .gitignore  README.md  experiments.csv  output.csv  pyproject.toml
notebooks/: amazon_reviews.ipynb  cvar_example.ipynb  fairness_risk_measures.ipynb  lastfmrec.ipynb  metadata.txt  movielens.ipynb  recsys.ipynb  seq_rec .ipynb  torchrec.ipynb  visualisation.ipynb
notebooks/experiments/: comapre_relaxed.ipynb  dist_check.ipynb  eda.ipynb  fig1.py  fig2a.py  fig2b.py  gradient_experiments.ipynb  group_assignments.json  lang.ipynb  plots.ipynb  relaxed_cvar_tradeoff.ipynb  sim.ipynb  tmp.ipynb
notebooks/movielens/: comapre_relaxed.ipynb  cvar.ipynb  eda.ipynb  experiment_utils.py  experiments.csv  experiments_amazon.ipynb  experiments_amazon_mean copy.ipynb  experiments_amazon_mean.ipynb  experiments_amazon_mean_cvar copy 2.ipynb  experiments_amazon_mean_cvar copy.ipynb  experiments_amazon_mean_cvar.ipynb  fig1.ipynb  fig2a.ipynb  group_means.csv  output.csv  plotting.ipynb  plotting2.ipynb  test.ipynb  twosf_solver.py
results/1744992070/: min_top_category_usage_group_500_200_10_0_0.35_0.7_1_0.95.json
results/1744992824/: cvar_top_category_usage_group_500_200_10_0_0.35_0.7_1_0.95.json  mean_top_category_usage_group_500_200_10_0_0.35_0.7_1_0.95.json  min_top_category_usage_group_500_200_10_0_0.35_0.7_1_0.95.json
results/1745347080/: cvar_top_category_500_200_10_0.1_0.35_0.5_0.75_1_0_0.25_0.5_0.7_0.95.json
results/1745502946/: cvar_top_category_500_200_10_0.1_0.35_0.5_0.75_1_0_0.25_0.5_0.7_0.95.json
results/1745510212/: mean_top_category_usage_group_500_200_10_0_0.1_0.35_0.5_0.75_1_0.95.json  min_top_category_usage_group_500_200_10_0_0.1_0.35_0.5_0.75_1_0.95.json
results/1745518833/: cvar_usage_group_500_200_10_0.1_0.35_0.5_0.75_1_0_0.25_0.5_0.7_0.95.json  min_usage_group_300_100_10_0_0.1_0.35_0.5_0.75_1_0.json  min_usage_group_300_100_1_0_0.1_0.35_0.5_0.75_1_0.json  min_usage_group_300_100_5_0_0.1_0.35_0.5_0.75_1_0.json
results/1745525120/: min_usage_group_300_100_10_0_0.1_0.35_0.5_0.75_1_0.json  min_usage_group_300_100_1_0_0.1_0.35_0.5_0.75_1_0.json  min_usage_group_300_100_5_0_0.1_0.35_0.5_0.75_1_0.json
results/1745579185/: cvar_relaxed_naive_top_category_usage_group_500_200_10_0_0.1_0.35_0.5_0.75_1_0.95.json  cvar_relaxed_topk_top_category_usage_group_500_200_10_0_0.1_0.35_0.5_0.75_1_0.95.json
results/1745580942/: cvar_relaxed_naive_top_category_usage_group_500_200_10_0_0.1_0.35_0.5_0.75_1_0.95.json  cvar_relaxed_topk_top_category_usage_group_500_200_10_0_0.1_0.35_0.5_0.75_1_0.95.json
results/1746445476/: mean_usage_group_500_200_10_0_0.1_0.35_0.5_0.75_1_0.95.json
src/: measures.py  utils.py
src/problems/: run.py  (+4 more)
(+83 files in other folders)
