[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "torch>=2.6.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "mypy>=1.14.1", "ruff>=0.9.4"]


[tool.mypy]
files = "src/**/*.py"
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
strict_equality = true
[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "transformers.*",
    "torch.*",
    "torchvision.*",
    "numpy.*",
    "pandas.*",
    "sklearn.*",
    "gensim.*",
    "nltk.*",
    "spacy.*",
    "matplotlib.*",
    "seaborn.*",
    "vec2text.*",
    "datasets.*",
    "evaluate.*",
    "tqdm.*",
    "networkx.*",
]
ignore_missing_imports = true
